Fixed some problems with login

--- a/app/index.html
+++ b/app/index.html
@@ -108,7 +108,7 @@
             </div>
             <div class="modal-body" ng-class="{'has-error': loginForm.credentials.$invalid}">
                 <label>User name</label>
-                <input type="text" placeholder="Username" required ng-model="credentials.name" />
+                <input type="text" placeholder="Username" required ng-model="credentials.name" autofocus/>
                                                    
               <label>Password</label>
               <input type="password" placeholder="Password" ng-model="credentials.password" />
