First webworkers pool and directive  implementation. Also views for the demo.

--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,9 @@
                     <li ng-class="{ active: $state.includes('translation') }">
                         <a ui-sref="translation">Translation</a>
                     </li>
+                    <li ng-class="{ active: $state.includes('performance') }">
+                        <a ui-sref="performance">Performance</a>
+                    </li>
                     <li ng-class="{ active: $state.includes('about') }">
                         <a ui-sref="about">About</a>
                     </li>
