--- a/app/index.html
+++ b/app/index.html
@@ -17,9 +17,10 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/jquery.mobile.css">
-    <link rel="stylesheet" href="styles/angular-jqm.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/jquery.mobile.css">
+    <link rel="stylesheet" type="text/css" href="styles/angular-jqm.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/ng-grid/ng-grid.min.css" />
     <!-- endbuild -->
 
 </head>
@@ -145,6 +146,7 @@
     <script src="bower_components/angular-dynamic-locale/src/tmhDinamicLocale.js"></script>
     <script src="bower_components/angular-cache/dist/angular-cache.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/ng-grid/ng-grid-2.0.11.min.js"></script>
     <!-- endbuild -->
 
     <!-- Temporary solution based on CDN. For development purpose only -->
@@ -163,7 +165,6 @@
     <script src="scripts/api/modules/api-utils.js"></script>
     <script src="scripts/api/directives/cache-directives.js"></script>
     <script src="scripts/api/directives/rest-directives.js"></script>
-
     <script src="scripts/api/modules/api-performance.js"></script>
     <!-- endbuild -->
 
@@ -179,7 +180,6 @@
     <script src="scripts/controllers/mobile-controllers.js"></script>
     <script src="scripts/factories/app-factory.js"></script>
     <script src="scripts/states/app-states.js"></script>
-
     <script src="scripts/controllers/performance-controllers.js"></script>
     <!-- endbuild -->
 </body>
