- Added angular-slider module an demo - Added tablet detection as a mobile browser -

--- a/app/index.html
+++ b/app/index.html
@@ -112,10 +112,11 @@
     <div ui-view class="myslide" autoscroll="false"></div>
 
     <script src="https://plus.google.com/js/client:plusone.js"></script>
-    
+
     <!-- build:js scripts/external.js -->
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-touch/angular-touch.min.js"></script>
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="bower_components/jquery-flot/jquery.flot.js"></script>
     <script src="bower_components/jquery-flot/jquery.flot.resize.js"></script>
@@ -150,6 +151,7 @@
     <script src="bower_components/angular-dynamic-locale/src/tmhDinamicLocale.js"></script>
     <script src="bower_components/angular-cache/dist/angular-cache.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/venturocket-angular-slider/build/angular-slider.min.js"></script>
     <!-- endbuild -->
 
     <!-- Temporary solution based on CDN. For development purpose only -->
