- Added xeditable plugin and demo - Fixed cpustyle CSS overriding Bootstrap classes - Updated jquery-flot to version 0.8.3 to solve a memory leak issue with resize plugin

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/fade.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/cpustyle.css">
+    <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css">
     <!-- endbuild -->
 </head>
 
@@ -153,6 +154,7 @@
     <script src="bower_components/venturocket-angular-slider/build/angular-slider.min.js"></script>
     <script src="bower_components/qrcode/lib/qrcode.min.js"></script>
     <script src="bower_components/angular-qr/angular-qr.min.js"></script>
+    <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 
     <!-- ########## API modules ########## -->
 
