Added grid data for performance demo. Added json files for demos. Added new methods to RESTFactory for big amounts of data retrieving. Commented serverpush item in main menu.

--- a/app/index.html
+++ b/app/index.html
@@ -80,9 +80,9 @@
                     <li ng-class="{ active: $state.includes('mobile') }">
                         <a ui-sref="mobile">Mobile</a>
                     </li>
-                    <li ng-class="{ active: $state.includes('serverpush') }">
-                        <a ui-sref="serverpush">Server Push</a>
-                    </li>
+                    <!--<li ng-class="{ active: $state.includes('serverpush') }">-->
+                        <!--<a ui-sref="serverpush">Server Push</a>-->
+                    <!--</li>-->
                     <li ng-class="{ active: $state.includes('translation') }">
                         <a ui-sref="translation">Translation</a>
                     </li>
@@ -146,7 +146,7 @@
     <script src="bower_components/angular-dynamic-locale/src/tmhDinamicLocale.js"></script>
     <script src="bower_components/angular-cache/dist/angular-cache.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/ng-grid/ng-grid-2.0.11.min.js"></script>
+    <script src="bower_components/ng-grid/ng-grid-2.0.11.debug.js"></script>
     <!-- endbuild -->
 
     <!-- Temporary solution based on CDN. For development purpose only -->
