--- a/app/index.html
+++ b/app/index.html
@@ -158,7 +158,7 @@
     <!-- endbuild -->
 
     <!-- uibootstrap -->
-    <script src="bower_components/bootstrap-sass/js/bootstrap-affix.js"></script>
+<!--    <script src="bower_components/bootstrap-sass/js/bootstrap-affix.js"></script>
     <script src="bower_components/bootstrap-sass/js/bootstrap-alert.js"></script>
     <script src="bower_components/bootstrap-sass/js/bootstrap-dropdown.js"></script>
     <script src="bower_components/bootstrap-sass/js/bootstrap-tooltip.js"></script>
@@ -170,8 +170,8 @@
     <script src="bower_components/bootstrap-sass/js/bootstrap-carousel.js"></script>
     <script src="bower_components/bootstrap-sass/js/bootstrap-scrollspy.js"></script>
     <script src="bower_components/bootstrap-sass/js/bootstrap-collapse.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-tab.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="bower_components/bootstrap-sass/js/bootstrap-tab.js"></script>-->
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
     <!-- modules -->
     <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
