Updated HTML5 badge

--- a/app/index.html
+++ b/app/index.html
@@ -50,8 +50,11 @@
                  then to navigate to a state. When this link is clicked it will take the application
                  to the 'home' state. Behind the scenes the directive also adds the correct href attr
                  and url. -->
-            <a class="brand" ui-sref="home">Appverse HTML5
+<!--            <a class="brand" ui-sref="home">Appverse HTML5
                 <img src="http://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-device-storage.png" alt="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, and Offline &amp; Storage" title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, and Offline &amp; Storage">
+            </a>-->
+            <a class="brand" ui-sref="home">Appverse HTML5
+                <img src="http://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-device-performance-semantics-storage.png" title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Performance &amp; Integration, Semantics, and Offline &amp; Storage">
             </a>
 
             <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
