--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
 
 <!--Include the module with the app scope-->
 
-<body data-ng-app="appverseClientIncubatorApp">
+<body data-ng-app="App">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
