--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,6 @@
     <!-- build:css(.tmp) styles/styles.css -->
     <link rel="stylesheet" href="styles/jquery.mobile-1.3.2.min.css">
     <link rel="stylesheet" href="styles/angular-jqm.css">
-    <link rel="stylesheet" href="styles/fade.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/cpustyle.css">
     <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css">
@@ -42,30 +41,30 @@
      This is the unnamed root, aka index.html
      You can place here your views in the ui-view points.
     -->
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
 
             <!-- ui-sref is a directive from ui-router for linking a state location with an anchor link.
                  We should almost always use ui-sref instead of href on our links when we want
                  then to navigate to a state. When this link is clicked it will take the application
                  to the 'home' state. Behind the scenes the directive also adds the correct href attr
                  and url. -->
-<!--            <a class="brand" ui-sref="home">Appverse HTML5
-                <img src="http://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-device-storage.png" alt="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, and Offline &amp; Storage" title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, and Offline &amp; Storage">
-            </a>-->
-            <a class="brand" ui-sref="home">Appverse HTML5
-                <img src="http://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-device-performance-semantics-storage.png" title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Performance &amp; Integration, Semantics, and Offline &amp; Storage">
-            </a>
+            <div class="navbar-header">
 
-            <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
 
-            <div class="nav-collapse collapse">
-                <ul class="nav">
+                <a class="navbar-brand" ui-sref="home">Appverse HTML5
+                    <img src="http://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-device-performance-semantics-storage.png" title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Performance &amp; Integration, Semantics, and Offline &amp; Storage">
+                </a>
+            </div>
+
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
 
                     <!-- Here you can see ui-sref in action again. Also notice the use of $state.includes, which
                  will set the links to 'active' if, for example on the first link, 'contacts' or any of
@@ -104,7 +103,7 @@
                  on from various different child states and we want a name to help us target. -->
             <!--            <p ui-view="hint" class="navbar-text pull-left" autoscroll="false"></p>-->
         </div>
-    </div>
+    </nav>
 
     <div>
       <script type="text/ng-template" id="modalLoginForm.html">
@@ -160,8 +159,8 @@
     <script src="bower_components/jquery-flot/jquery.flot.time.js"></script>
 
     <!-- uibootstrap -->
-    <script src="bower_components/bootstrap-sass/js/bootstrap-transition.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-collapse.js"></script>
+    <script src="bower_components/bootstrap-sass/js/transition.js"></script>
+    <script src="bower_components/bootstrap-sass/js/collapse.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
     <!-- modules -->
