--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <!-- build:css(.tmp) styles/styles.css -->
     <link rel="stylesheet" href="styles/jquery.mobile-1.3.2.min.css">
     <link rel="stylesheet" href="styles/angular-jqm.css">
+    <link rel="stylesheet" href="styles/bootstrap.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/cpustyle.css">
     <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css">
@@ -58,8 +59,9 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <a class="navbar-brand" ui-sref="home">Appverse HTML5
-                    <img src="http://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-device-performance-semantics-storage.png" title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Performance &amp; Integration, Semantics, and Offline &amp; Storage">
+                <a class="navbar-brand" ui-sref="home">
+                    <span>Appverse<br>HTML5</span>
+                    <img src="http://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt="HTML5 Powered" title="HTML5 Powered">
                 </a>
             </div>
 
