changed dependencies to appverse only dependencies

--- a/app/index.html
+++ b/app/index.html
@@ -161,7 +161,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/angular-cache/dist/angular-cache.min.js"></script>
     <script src="bower_components/angular-resource/angular-resource.min.js"></script>
-    <script src="bower_components/ng-grid/ng-grid-2.0.11.debug.js"></script>
+    <script src="bower_components/ng-grid/build/ng-grid.debug.js"></script>
 
     <!-- UI components -->
     <script src="bower_components/venturocket-angular-slider/build/angular-slider.min.js"></script>
