--- a/app/index.html
+++ b/app/index.html
@@ -15,14 +15,14 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <!-- build:css(.tmp) styles/styles.css -->
+    <!-- build:css styles/styles.css -->
     <link rel="stylesheet" href="styles/jquery.mobile-1.3.2.min.css">
     <link rel="stylesheet" href="styles/angular-jqm.css">
     <link rel="stylesheet" href="styles/bootstrap.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/cpustyle.css">
     <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/ng-grid/ng-grid.min.css" />
+    <link rel="stylesheet" href="bower_components/ng-grid/ng-grid.min.css">
     <!-- endbuild -->
 </head>
 
@@ -109,27 +109,39 @@
 
     <div>
         <script type="text/ng-template" id="modalLoginForm.html">
-          <div class="modal-header">
-              <h3>Enter your user name and password</h3>
-          </div>
-          <form name="loginForm" novalidate ng-submit="submit()">
-            <div class="modal-body">
-                <span ng-show="loginForm.name.$error.required || loginForm.password.$error.required" />
-            </div>
+            < div class = "modal-header" >
+                < h3 > Enter your user name and password < /h3>
+          </div >
+                < form name = "loginForm"
+            novalidate ng - submit = "submit()" >
+                < div class = "modal-body" >
+                < span ng - show = "loginForm.name.$error.required || loginForm.password.$error.required" / >
+                < /div>
             <div class="modal-body" ng-class="{'has-error': loginForm.credentials.$invalid}">
-                <label>User name</label>
-                <input id="name" type="text" placeholder="Username" required ng-model="credentials.name" autofocus/>
-              <label>Password</label>
-              <input id="password" type="password" placeholder="Password" ng-model="credentials.password" />
-            </div>
+                <label>User name</label >
+                < input id = "name"
+            type = "text"
+            placeholder = "Username"
+            required ng - model = "credentials.name"
+            autofocus / >
+                < label > Password < /label>
+              <input id="password" type="password" placeholder="Password" ng-model="credentials.password" / >
+                < /div>
             <div class="modal-footer">
-                <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-                <input type="submit" class="btn primary-btn" value="Submit" ng-disabled="!loginForm.$valid" />
-            </div>
-          </form>
-          <font color="red"> {{ errorMessage }} </font>
-      </script>
-  </div>
+                <button class="btn btn-warning" ng-click="cancel()">Cancel</button >
+                < input type = "submit"
+            class = "btn primary-btn"
+            value = "Submit"
+            ng - disabled = "!loginForm.$valid" / >
+                < /div>
+          </form >
+                < font color = "red" > {
+                    {
+                        errorMessage
+                    }
+            } < /font>
+        </script>
+    </div>
 
     <!-- MAIN INSERTION POINT
          Here is the main ui-view (it is unnamed) as the main content insertion point.
@@ -161,7 +173,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/angular-cache/dist/angular-cache.min.js"></script>
     <script src="bower_components/angular-resource/angular-resource.min.js"></script>
-    <script src="bower_components/ng-grid/ng-grid-2.0.11.debug.js"></script>
+    <script src="bower_components/ng-grid/build/ng-grid.min.js"></script>
 
     <!-- UI components -->
     <script src="bower_components/venturocket-angular-slider/build/angular-slider.min.js"></script>
