- Fixed HTML5 logo HTTP issue

--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
 
                 <a class="navbar-brand" ui-sref="home">
                     <span>Appverse<br>HTML5</span>
-                    <img src="http://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt="HTML5 Powered" title="HTML5 Powered">
+                    <img src="styles/images/html5-badge-h-solo.png" alt="HTML5 Powered" title="HTML5 Powered">
                 </a>
             </div>
 
