--- a/app/index.html
+++ b/app/index.html
@@ -15,15 +15,19 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <!-- build:css(.tmp) styles/styles.css -->
+    <!-- build:css styles/vendor.css -->
     <link rel="stylesheet" href="styles/jquery.mobile-1.3.2.min.css">
     <link rel="stylesheet" href="styles/angular-jqm.css">
-    <link rel="stylesheet" href="styles/bootstrap.css">
-    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/cpustyle.css">
     <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css">
     <link rel="stylesheet" href="bower_components/ng-grid/ng-grid.min.css">
     <!-- endbuild -->
+
+    <!-- build:css(.tmp) styles/styles.css -->
+    <link rel="stylesheet" href="styles/bootstrap.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
+
 </head>
 
 <!--Include the module with the app scope-->
@@ -109,37 +113,28 @@
 
     <div>
         <script type="text/ng-template" id="modalLoginForm.html">
-            < div class = "modal-header" >
-                < h3 > Enter your user name and password < /h3>
-          </div >
-                < form name = "loginForm"
-            novalidate ng - submit = "submit()" >
-                < div class = "modal-body" >
-                < span ng - show = "loginForm.name.$error.required || loginForm.password.$error.required" / >
-                < /div>
-            <div class="modal-body" ng-class="{'has-error': loginForm.credentials.$invalid}">
-                <label>User name</label >
-                < input id = "name"
-            type = "text"
-            placeholder = "Username"
-            required ng - model = "credentials.name"
-            autofocus / >
-                < label > Password < /label>
-              <input id="password" type="password" placeholder="Password" ng-model="credentials.password" / >
-                < /div>
-            <div class="modal-footer">
-                <button class="btn btn-warning" ng-click="cancel()">Cancel</button >
-                < input type = "submit"
-            class = "btn primary-btn"
-            value = "Submit"
-            ng - disabled = "!loginForm.$valid" / >
-                < /div>
-          </form >
-                < font color = "red" > {
-                    {
-                        errorMessage
-                    }
-            } < /font>
+            <div class="modal-header">
+                <h3> Enter your user name and password
+                    </h3>
+            </div>
+            <form name="loginForm" novalidate ng - submit="submit()">
+                <div class="modal-body">
+                    <span ng - show="loginForm.name.$error.required || loginForm.password.$error.required" />
+                </div>
+                <div class="modal-body" ng-class="{'has-error': loginForm.credentials.$invalid}">
+                    <label>User name</label>
+                    <input id="name" type="text" placeholder="Username" required ng - model="credentials.name" autofocus />
+                    <label> Password
+                    </label>
+                    <input id="password" type="password" placeholder="Password" ng-model="credentials.password" />
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+                    <input type="submit" class="btn primary-btn" value="Submit" ng - disabled="!loginForm.$valid" />
+                </div>
+            </form>
+            <font color="red"> { { errorMessage } }
+                </font>
         </script>
     </div>
 
@@ -217,7 +212,6 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/security-controllers.js"></script>
     <script src="scripts/controllers/topics-controllers.js"></script>
-    <script src="scripts/controllers/gadgets-controllers.js"></script>
     <script src="scripts/controllers/cache-controllers.js"></script>
     <script src="scripts/controllers/detection-controllers.js"></script>
     <script src="scripts/controllers/servermessages-controllers.js"></script>
@@ -231,5 +225,3 @@
 </body>
 
 </html>
-
-
