--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,9 @@
 <!--<![endif]-->
 
 <head>
-    <title data-ng-bind="$state.current.name">Appverse Web HTML5 Incubator</title>
+    <title data-ng-bind="$state.current.name">
+        showcase
+    </title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
@@ -16,23 +18,25 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css styles/vendor.css -->
-    <link rel="stylesheet" href="styles/jquery.mobile-1.3.2.min.css">
-    <link rel="stylesheet" href="styles/angular-jqm.css">
-    <link rel="stylesheet" href="styles/cpustyle.css">
     <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css">
-    <link rel="stylesheet" href="bower_components/ng-grid/ng-grid.min.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/ng-grid/ng-grid.min.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/angular-ui-select/dist/select.min.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/angularjs-slider/dist/rzslider.min.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/selectize/dist/css/selectize.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/angular-chart.js/dist/angular-chart.css">
     <!-- endbuild -->
 
     <!-- build:css(.tmp) styles/styles.css -->
     <link rel="stylesheet" href="styles/bootstrap.css">
+    <link rel="stylesheet" href="styles/animations.css">
+    <link rel="stylesheet" href="styles/grid.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-
 </head>
 
 <!--Include the module with the app scope-->
 
-<body data-ng-app="App">
+<body data-ng-app="showcaseApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -46,181 +50,108 @@
      This is the unnamed root, aka index.html
      You can place here your views in the ui-view points.
     -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
+    <nav class="navbar navbar-default navbar-fixed-top">
 
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <!-- ui-sref is a directive from ui-router for linking a state location with an anchor link.
                  We should almost always use ui-sref instead of href on our links when we want
                  then to navigate to a state. When this link is clicked it will take the application
                  to the 'home' state. Behind the scenes the directive also adds the correct href attr
                  and url. -->
-            <div class="navbar-header">
+            <a class="navbar-brand" ui-sref="home">
+                showcase
+            </a>
+        </div>
 
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-
-                <a class="navbar-brand" ui-sref="home">
-                    <span>Appverse<br>HTML5</span>
-                    <img src="styles/images/html5-badge-h-solo.png" alt="HTML5 Powered" title="HTML5 Powered">
-                </a>
-            </div>
-
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-
-                    <!-- Here you can see ui-sref in action again. Also notice the use of $state.includes, which
+        <div class="collapse navbar-collapse" id="main-navbar-collapse">
+            <ul class="nav navbar-nav">
+                <!-- Here you can see ui-sref in action again. Also notice the use of $state.includes, which
                  will set the links to 'active' if, for example on the first link, 'contacts' or any of
                  its descendant states are activated. -->
-                    <li data-ng-class="{ active: $state.includes('topics') }">
-                        <a ui-sref="topics.list">REST</a>
-                    </li>
-                    <li data-ng-class="{ active: $state.includes('ui') }">
-                        <a ui-sref="ui">Gadgets</a>
-                    </li>
-                    <li data-ng-class="{ active: $state.includes('cache') }">
-                        <a ui-sref="cache.state1">Cache</a>
-                    </li>
-                    <li data-ng-class="{ active: $state.includes('detection') }">
-                        <a ui-sref="detection">Detection</a>
-                    </li>
-                    <li data-ng-class="{ active: $state.includes('mobile') }">
-                        <a ui-sref="mobile">Mobile</a>
-                    </li>
-                    <li data-ng-class="{ active: $state.includes('websockets') }">
-                        <a ui-sref="websockets">Websockets</a>
-                    </li>
-                    <li data-ng-class="{ active: $state.includes('translation') }">
-                        <a ui-sref="translation">Translation</a>
-                    </li>
-                    <li ng-class="{ active: $state.includes('performance') }">
-                        <a ui-sref="performance.webworkers">Performance</a>
-                    </li>
-                    <li data-ng-class="{ active: $state.includes('about') }">
-                        <a ui-sref="about">About</a>
-                    </li>
-                </ul>
-            </div>
-
-            <!-- Here is a named ui-view (ui-view="hint"). ui-views don't have to be named, but we'll be populate this
-                 on from various different child states and we want a name to help us target. -->
-            <!--            <p ui-view="hint" class="navbar-text pull-left" autoscroll="false"></p>-->
+                <li data-ng-class="{ active: $state.includes('home') }">
+                    <a angular-ripple="" ui-sref="home"><i class="glyphicon glyphicon-home"></i> Home</a>
+                </li>
+                <li data-ng-class="{ active: $state.includes('theme') }">
+                    <a angular-ripple="" ui-sref="theme"><i class="glyphicon glyphicon-pencil"></i> Theme</a>
+                </li>
+                <li data-ng-class="{ active: $state.includes('components') }">
+                    <a angular-ripple="" ui-sref="components"><i class="glyphicon glyphicon-book"></i> Components</a>
+                </li>
+                <li data-ng-class="{ active: $state.includes('charts') }">
+                    <a angular-ripple="" ui-sref="charts"><i class="glyphicon glyphicon-stats"></i> Charts</a>
+                </li>
+            </ul>
         </div>
-    </nav>
 
-    <div>
-        <script type="text/ng-template" id="modalLoginForm.html">
-            <div class="modal-header">
-                <h3> Enter your user name and password
-                    </h3>
-            </div>
-            <form name="loginForm" novalidate ng - submit="submit()">
-                <div class="modal-body">
-                    <span ng - show="loginForm.name.$error.required || loginForm.password.$error.required" />
-                </div>
-                <div class="modal-body" ng-class="{'has-error': loginForm.credentials.$invalid}">
-                    <label>User name</label>
-                    <input id="name" type="text" placeholder="Username" required ng - model="credentials.name" autofocus />
-                    <label> Password
-                    </label>
-                    <input id="password" type="password" placeholder="Password" ng-model="credentials.password" />
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-                    <input type="submit" class="btn primary-btn" value="Submit" ng - disabled="!loginForm.$valid" />
-                </div>
-            </form>
-            <font color="red"> { { errorMessage } }
-                </font>
-        </script>
-    </div>
+    </nav>
 
     <!-- MAIN INSERTION POINT
          Here is the main ui-view (it is unnamed) as the main content insertion point.
          It replaces the default Angular's ng-view directive.
          It will be populate by its immediate children's templates/views unless otherwise
          explicitly named views are targeted.
-         It's also employing the ng-animate directive.
-         For example: <div ui-view ng-animate="{enter:'fade-enter'}">
      -->
-    <div ui-view class="myslide" autoscroll="false"></div>
+    <div ui-view="" class="fade-in" autoscroll="false"></div>
 
     <!-- build:js scripts/scripts.js -->
-    <script src="bower_components/jquery/jquery.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-touch/angular-touch.min.js"></script>
     <script src="bower_components/modernizr/modernizr.js"></script>
-    <script src="bower_components/jquery-flot/jquery.flot.js"></script>
-    <script src="bower_components/jquery-flot/jquery.flot.resize.js"></script>
-    <script src="bower_components/jquery-flot/jquery.flot.time.js"></script>
-
-    <!-- uibootstrap -->
-    <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
-    <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
+    <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-
-    <!-- modules -->
-    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="bower_components/angular-cache/dist/angular-cache.min.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="bower_components/ng-grid/build/ng-grid.min.js"></script>
-
-    <!-- UI components -->
     <script src="bower_components/venturocket-angular-slider/build/angular-slider.min.js"></script>
-    <script src="bower_components/qrcode/lib/qrcode.min.js"></script>
-    <script src="bower_components/angular-qr/angular-qr.min.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
-
-    <!-- ########## API modules ########## -->
-    <script src="scripts/api/modules/api-cache.js"></script>
-    <script src="scripts/api/modules/api-configuration.js"></script>
-    <script src="scripts/api/modules/api-detection.js"></script>
-    <script src="scripts/api/modules/api-logging.js"></script>
-    <script src="scripts/api/modules/api-main.js"></script>
-
-    <!-- REST module -->
-    <script src="bower_components/lodash/dist/lodash.underscore.min.js"></script>
-    <script src="bower_components/restangular/dist/restangular.min.js"></script>
-    <script src="scripts/api/modules/api-rest.js"></script>
-
-    <!-- Security module -->
-    <script src="scripts/api/modules/api-security.js"></script>
-
-    <!-- Server Push module -->
-    <script src="bower_components/socket.io-client/dist/socket.io.min.js"></script>
-    <script src="scripts/api/modules/api-serverpush.js"></script>
-
-    <!-- Translate module -->
-    <script src="scripts/api/modules/api-translate.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse/appverse.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-router/appverse-router.min.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-utils/appverse-utils.min.js"></script>
+    <script src="bower_components/angular-ripple/angular-ripple.js"></script>
+    <script src="bower_components/angular-ui-select/dist/select.min.js"></script>
+    <script src="bower_components/angularjs-slider/dist/rzslider.min.js"></script>
+    <script src="bower_components/angular-resize/dist/angular-resize.min.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="bower_components/Chart.js/Chart.min.js"></script>
+    <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/home-controller.js"></script>
+    <script src="scripts/controllers/components-controller.js"></script>
+    <script src="scripts/controllers/modal-controller.js"></script>
+    <script src="scripts/controllers/charts-controller.js"></script>
+    <script src="scripts/states/app-states.js"></script>
+    <!-- PERFORMANCE MODULE -->
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-performance/appverse-performance.min.js"></script>
+    <!-- DETECTION MODULE -->
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-detection/appverse-detection.min.js"></script>
+    <!-- TRANSLATE MODULE -->
     <script src="bower_components/angular-translate/angular-translate.min.js"></script>
     <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
     <script src="bower_components/angular-dynamic-locale/src/tmhDynamicLocale.js"></script>
-
-    <script src="scripts/api/modules/api-utils.js"></script>
-
-    <!-- Directives should be included after the modules -->
-    <script src="scripts/api/directives/cache-directives.js"></script>
-    <script src="scripts/api/directives/rest-directives.js"></script>
-    <script src="scripts/api/modules/api-performance.js"></script>
-
-    <!-- app -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/security-controllers.js"></script>
-    <script src="scripts/controllers/topics-controllers.js"></script>
-    <script src="scripts/controllers/cache-controllers.js"></script>
-    <script src="scripts/controllers/detection-controllers.js"></script>
-    <script src="scripts/controllers/servermessages-controllers.js"></script>
-    <script src="scripts/controllers/translation-controllers.js"></script>
-    <script src="scripts/controllers/mobile-controllers.js"></script>
-    <script src="scripts/controllers/performance-controllers.js"></script>
-    <script src="scripts/factories/app-factory.js"></script>
-    <script src="scripts/states/app-states.js"></script>
-
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-translate/appverse-translate.min.js"></script>
+    <!-- SERVER PUSH MODULE -->
+    <script src="bower_components/socket.io-client/dist/socket.io.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-serverpush/appverse-serverpush.min.js"></script>
+    <!-- REST MODULE -->
+    <script src="bower_components/lodash/lodash.min.js"></script>
+    <script src="bower_components/restangular/dist/restangular.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-rest/appverse-rest.min.js"></script>
+    <!-- LOGGING MODULE -->
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-logging/appverse-logging.min.js"></script>
+    <!-- CACHE MODULE -->
+    <script src="bower_components/angular-cache/dist/angular-cache.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-cache/appverse-cache.min.js"></script>
+    <!-- SECURITY MODULE -->
+    <script src="bower_components/angular-resource/angular-resource.min.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
+    <script src="bower_components/appverse-web-html5-security/dist/appverse-html5-security.min.js"></script>
     <!-- endbuild -->
 </body>
 
