--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,12 @@
                 <li data-ng-class="{ active: $state.includes('charts') }">
                     <a angular-ripple="" ui-sref="charts"><i class="glyphicon glyphicon-stats"></i> Charts</a>
                 </li>
+                <li data-ng-class="{ active: $state.includes('translation') }">
+                    <a angular-ripple="" ui-sref="translation"><i class="glyphicon glyphicon-globe"></i> Translation</a>
+                </li>
+                <li data-ng-class="{ active: $state.includes('about') }">
+                    <a angular-ripple="" ui-sref="about"><i class="glyphicon glyphicon-info-sign"></i> About</a>
+                </li>
             </ul>
         </div>
 
@@ -126,6 +132,7 @@
     <script src="scripts/controllers/components-controller.js"></script>
     <script src="scripts/controllers/modal-controller.js"></script>
     <script src="scripts/controllers/charts-controller.js"></script>
+    <script src="scripts/controllers/translation-controllers.js"></script>
     <script src="scripts/states/app-states.js"></script>
     <!-- PERFORMANCE MODULE -->
     <script src="bower_components/appverse-web-html5-core/dist/appverse-performance/appverse-performance.min.js"></script>
