--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,8 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="bower_components/Chart.js/Chart.min.js"></script>
     <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
+    <script src="bower_components/highlightjs/highlight.pack.js"></script>
+    <script src="bower_components/angular-highlightjs/angular-highlightjs.min.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/home-controller.js"></script>
     <script src="scripts/controllers/components-controller.js"></script>
