--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="bower_components/angularjs-slider/dist/rzslider.min.css">
     <link rel="stylesheet" type="text/css" href="bower_components/selectize/dist/css/selectize.css">
     <link rel="stylesheet" type="text/css" href="bower_components/angular-chart.js/dist/angular-chart.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/highlightjs/styles/default.css">
     <!-- endbuild -->
 
     <!-- build:css(.tmp) styles/styles.css -->
