Added IndexedDB demo.

--- a/app/index.html
+++ b/app/index.html
@@ -128,6 +128,7 @@
     <script src="bower_components/angular-highlightjs/angular-highlightjs.min.js"></script>
     <script src="scripts/app.js"></script>
 
+    <script src="scripts/filters/date-format.js"></script>
     <script src="scripts/controllers/home-controller.js"></script>
     <script src="scripts/controllers/components-controller.js"></script>
     <script src="scripts/controllers/modal-controller.js"></script>
@@ -136,6 +137,7 @@
     <script src="scripts/controllers/performance-controllers.js"></script>
     <script src="scripts/controllers/webworkers-controller-code.js"></script>
     <script src="scripts/controllers/translation-controller-code.js"></script>
+    <script src="scripts/controllers/simpleidb-controller-code.js"></script>
     <script src="scripts/states/app-states.js"></script>
 
     <!-- PERFORMANCE MODULE -->
