Updated index.html to use no min versions of Appverse Updated protractor version

--- a/app/index.html
+++ b/app/index.html
@@ -112,10 +112,10 @@
     <script src="bower_components/ng-grid/build/ng-grid.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
-    <script src="bower_components/appverse-web-html5-core/dist/appverse/appverse.min.js"></script>
-    <script src="bower_components/appverse-web-html5-core/dist/appverse-router/appverse-router.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse/appverse.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-router/appverse-router.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="bower_components/appverse-web-html5-core/dist/appverse-utils/appverse-utils.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-utils/appverse-utils.js"></script>
     <script src="bower_components/angular-ripple/angular-ripple.js"></script>
     <script src="bower_components/angular-ui-select/dist/select.min.js"></script>
     <script src="bower_components/angularjs-slider/dist/rzslider.min.js"></script>
@@ -139,37 +139,37 @@
     <script src="scripts/states/app-states.js"></script>
 
     <!-- PERFORMANCE MODULE -->
-    <script src="bower_components/appverse-web-html5-core/dist/appverse-performance/appverse-performance.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-performance/appverse-performance.js"></script>
 
     <!-- DETECTION MODULE -->
-    <script src="bower_components/appverse-web-html5-core/dist/appverse-detection/appverse-detection.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-detection/appverse-detection.js"></script>
 
     <!-- TRANSLATE MODULE -->
     <script src="bower_components/angular-translate/angular-translate.min.js"></script>
     <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
     <script src="bower_components/angular-dynamic-locale/src/tmhDynamicLocale.js"></script>
-    <script src="bower_components/appverse-web-html5-core/dist/appverse-translate/appverse-translate.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-translate/appverse-translate.js"></script>
 
     <!-- SERVER PUSH MODULE -->
     <script src="bower_components/socket.io-client/dist/socket.io.min.js"></script>
-    <script src="bower_components/appverse-web-html5-core/dist/appverse-serverpush/appverse-serverpush.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-serverpush/appverse-serverpush.js"></script>
 
     <!-- REST MODULE -->
     <script src="bower_components/lodash/lodash.min.js"></script>
     <script src="bower_components/restangular/dist/restangular.min.js"></script>
-    <script src="bower_components/appverse-web-html5-core/dist/appverse-rest/appverse-rest.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-rest/appverse-rest.js"></script>
 
     <!-- LOGGING MODULE -->
-    <script src="bower_components/appverse-web-html5-core/dist/appverse-logging/appverse-logging.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-logging/appverse-logging.js"></script>
 
     <!-- CACHE MODULE -->
     <script src="bower_components/angular-cache/dist/angular-cache.min.js"></script>
-    <script src="bower_components/appverse-web-html5-core/dist/appverse-cache/appverse-cache.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-cache/appverse-cache.js"></script>
 
     <!-- SECURITY MODULE -->
     <script src="bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
-    <script src="bower_components/appverse-web-html5-security/dist/appverse-html5-security.min.js"></script>
+    <script src="bower_components/appverse-web-html5-security/dist/appverse-html5-security.js"></script>
 
     <!-- endbuild -->
 
