Updated phantomjs version Added indexedDB shim Changed browser to Chrome

--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,8 @@
     <script src="bower_components/angular-highlightjs/angular-highlightjs.min.js"></script>
     <script src="bower_components/qrcode/lib/qrcode.min.js"></script>
     <script src="bower_components/angular-qr/angular-qr.min.js"></script>
+    <script src="bower_components/IndexedDBShim/dist/indexeddbshim.min.js"></script>
+
     <script src="scripts/app.js"></script>
 
     <script src="scripts/filters/date-format.js"></script>
