Changed security icon to shield Fixed missing $rootScope dependency

--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@
                     <a angular-ripple="" ui-sref="webworkers"><i class="glyphicon glyphicon-plane"></i> Performance</a>
                 </li>
                 <li ng-class="{ active: $state.includes('security') }">
-                    <a angular-ripple="" ui-sref="security"><i class="glyphicon glyphicon-plane"></i> Security</a>
+                    <a angular-ripple="" ui-sref="security"><i class="glyphicon glyphicon-shield"></i> Security</a>
                 </li>
                 <li data-ng-class="{ active: $state.includes('about') }">
                     <a angular-ripple="" ui-sref="about"><i class="glyphicon glyphicon-info-sign"></i> About</a>
