Added Stomp and SockJS libraries Added websocket demo Fixed watch issues Removed unused coffee support Removed unused views

--- a/app/index.html
+++ b/app/index.html
@@ -157,6 +157,8 @@
     <script src="bower_components/appverse-web-html5-core/dist/appverse-translate/appverse-translate.js"></script>
 
     <!-- SERVER PUSH MODULE -->
+    <script src="bower_components/sockjs-client/dist/sockjs.min.js"></script>
+    <script src="bower_components/stomp-websocket/lib/stomp.min.js"></script>
     <script src="bower_components/appverse-web-html5-core/dist/appverse-serverpush/appverse-serverpush.js"></script>
 
     <!-- REST MODULE -->
@@ -183,6 +185,7 @@
     <script src="scripts/controllers/webworkers-controller-code.js"></script>
     <script src="scripts/controllers/translation-controller-code.js"></script>
     <script src="scripts/controllers/simpleidb-controller-code.js"></script>
+    <script src="scripts/controllers/websocket-controller-code.js"></script>
 </body>
 
 </html>
