- Styles folder structure modification.

--- a/app/index.html
+++ b/app/index.html
@@ -28,10 +28,7 @@
     <!-- endbuild -->
 
     <!-- build:css(.tmp) styles/styles.css -->
-    <link rel="stylesheet" href="styles/bootstrap.css">
-    <link rel="stylesheet" href="styles/animations.css">
-    <link rel="stylesheet" href="styles/grid.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/bootstrap-theme.css">
     <!-- endbuild -->
 </head>
 
