Added hide navbar menu on click

--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="collapse navbar-collapse" id="main-navbar-collapse">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav" ng-click="hideMenu()">
                 <!-- Here you can see ui-sref in action again. Also notice the use of $state.includes, which
                  will set the links to 'active' if, for example on the first link, 'contacts' or any of
                  its descendant states are activated. -->
