Use ui-sref-active when applicable

--- a/app/index.html
+++ b/app/index.html
@@ -72,22 +72,22 @@
                 <!-- Here you can see ui-sref in action again. Also notice the use of $state.includes, which
                  will set the links to 'active' if, for example on the first link, 'contacts' or any of
                  its descendant states are activated. -->
-                <li data-ng-class="{ active: $state.includes('home') }">
+                <li ui-sref-active="active">
                     <a angular-ripple="" ui-sref="home"><i class="glyphicon glyphicon-home"></i> Home</a>
                 </li>
-                <li data-ng-class="{ active: $state.includes('ui') }">
+                <li ui-sref-active="active">
                     <a angular-ripple="" ui-sref="theme"><i class="glyphicon glyphicon-pencil"></i> UI</a>
                 </li>
-                <li ng-class="{ active: $state.includes('content') }">
+                <li ui-sref-active="active">
                     <a angular-ripple="" ui-sref="rest"><i class="glyphicon glyphicon-th"></i> Content</a>
                 </li>
-                <li ng-class="{ active: $state.includes('performance') }">
+                <li ui-sref-active="active">
                     <a angular-ripple="" ui-sref="webworkers"><i class="glyphicon glyphicon-plane"></i> Performance</a>
                 </li>
-                <li ng-class="{ active: $state.includes('security') }">
+                <li ui-sref-active="active">
                     <a angular-ripple="" ui-sref="security"><i class="glyphicon glyphicon-lock"></i> Security</a>
                 </li>
-                <li data-ng-class="{ active: $state.includes('about') }">
+                <li ui-sref-active="active">
                     <a angular-ripple="" ui-sref="about"><i class="glyphicon glyphicon-info-sign"></i> About</a>
                 </li>
             </ul>
