Added REST ng-repeat demo

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
 
     <!-- build:css(.tmp) styles/styles.css -->
     <link rel="stylesheet" href="styles/bootstrap-theme.css">
+    <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 </head>
 
@@ -173,6 +174,7 @@
     <!-- endbuild -->
 
     <script src="scripts/controllers/rest-controller-code.js"></script>
+    <script src="scripts/controllers/rest-ng-repeat-code.js"></script>
     <script src="scripts/controllers/detection-controller-code.js"></script>
     <script src="scripts/controllers/webworkers-controller-code.js"></script>
     <script src="scripts/controllers/translation-controller-code.js"></script>
