Added missing ionic component

--- a/app/index.html
+++ b/app/index.html
@@ -166,6 +166,8 @@
     <script src="bower_components/appverse-web-html5-core/dist/appverse-rest/appverse-rest.js"></script>
 
     <!-- IONIC MODULE -->
+    <script src="bower_components/ionic/release/js/ionic.min.js"></script>
+    <script src="bower_components/ionic/release/js/ionic-angular.min.js"></script>
     <script src="bower_components/appverse-web-html5-core/dist/appverse-ionic/appverse-ionic.min.js"></script>
 
     <!-- LOGGING MODULE -->
